--- a/index.html
+++ b/index.html
@@ -18,9 +18,21 @@
       
     <!-- End setings Box -->
 <div class="setting-box">
-  
+<div class="toggle-setting">
+    <i class="fa-solid fa-gear "></i>
+</div>
    <div class="setting-container">
-    Testing options
+    <div class="option-box">
+        <h4>Colors</h4>
+        <ul class="colors-list">
+            <li class="active" data-color="#ffc107"></li>
+            <li data-color="#355"></li>
+            <li data-color="#0734ff"></li>
+            <li data-color="#9e2727"></li>
+            <li data-color="#22ed76"></li>
+        </ul>
+
+    </div>
    </div>
 </div>
     <!-- start landing Page -->
@@ -36,7 +48,7 @@
             </ul>
         </div>
         <div class="introduction-text">
-            <h1>We are creative agnce</h1>
+            <h1>We are <span>creative</span> agnce</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nesciunt error suscipit repudiandae dolores. Iure debitis</p>
         </div>
     </div>
