--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,29 +13,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap">
 </head>
+
 <body>
 
     <!-- Start setings Box -->
-      
-    <!-- End setings Box -->
-<div class="setting-box">
-<div class="toggle-setting">
-    <i class="fa-solid fa-gear "></i>
-</div>
-   <div class="setting-container">
-    <div class="option-box">
-        <h4>Colors</h4>
-        <ul class="colors-list">
-            <li class="active" data-color="#ffc107"></li>
-            <li data-color="#355"></li>
-            <li data-color="#0734ff"></li>
-            <li data-color="#9e2727"></li>
-            <li data-color="#22ed76"></li>
-        </ul>
 
+    <!-- End setings Box -->
+    <div class="setting-box">
+        <div class="toggle-setting">
+            <i class="fa-solid fa-gear "></i>
+        </div>
+        <div class="setting-container">
+            <div class="option-box">
+                <h4>Colors</h4>
+                <ul class="colors-list">
+                    <li class="active" data-color="#ffc107"></li>
+                    <li data-color="#355"></li>
+                    <li data-color="#0734ff"></li>
+                    <li data-color="#9e2727"></li>
+                    <li data-color="#22ed76"></li>
+                </ul>
+
+            </div>
+        </div>
     </div>
-   </div>
-</div>
     <!-- start landing Page -->
     <div class="landing-page">
         <div class="overlay"></div>
@@ -49,11 +51,13 @@
         </div>
         <div class="introduction-text">
             <h1>We are <span>creative</span> agnce</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nesciunt error suscipit repudiandae dolores. Iure debitis</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nesciunt error suscipit repudiandae
+                dolores. Iure debitis</p>
         </div>
     </div>
     <!-- End landing Page -->
 
     <script src="js/master.js"></script>
 </body>
+
 </html>
