Added background option

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <!-- Start setings Box -->
 
     <!-- End setings Box -->
@@ -34,6 +33,13 @@
                     <li data-color="#22ed76"></li>
                 </ul>
 
+            </div>
+            <div class="option-box">
+                <h4>Random Backgrounds</h4>
+                <div class="random-backgrounds">
+                <span class="yes active" data-background="yes">Yes</span>
+                <span class="no" data-background="no">No</span>
+                </div>
             </div>
         </div>
     </div>
