Added About-Us Section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Start setings Box -->
 
-    <!-- End setings Box -->
+
     <div class="setting-box">
         <div class="toggle-setting">
             <i class="fa-solid fa-gear "></i>
@@ -43,9 +43,11 @@
             </div>
         </div>
     </div>
+        <!-- End setings Box -->
     <!-- start landing Page -->
     <div class="landing-page">
         <div class="overlay"></div>
+      <div class="container">
         <div class="header-area">
             <div class="logo">JS Project</div>
             <ul class="links">
@@ -55,6 +57,7 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
+      </div>
         <div class="introduction-text">
             <h1>We are <span>creative</span> agnce</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nesciunt error suscipit repudiandae
@@ -62,6 +65,21 @@
         </div>
     </div>
     <!-- End landing Page -->
+    <!-- Start About Us -->
+    <div class="container">
+        <div class="about-us">
+            <div class="info-box">
+                <h2>About Us</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum amet earum eaque odit! Doloremque possimus
+                    ullam repudiandae quae debitis molestias quod assumenda vel accusantium obcaecati quisquam, mollitia ad
+                    magni nam.</p>
+            </div>
+            <div class="image-box">
+                <img src="/imge/about-us.jpeg" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- End About Us -->
 
     <script src="js/master.js"></script>
 </body>
