dded Features and Testimonials Sections

--- a/index.html
+++ b/index.html
@@ -197,6 +197,86 @@
         </div>
     </div>
     <!-- End TimeLine -->
+    <!-- Start Features -->
+    <div class="features">
+        <h2>Our Features</h2>
+        <div class="container">
+            <div class="feat-box">
+                <img src="/imge/fet-1.png" alt="">
+                <h4>Development</h4>
+                <p>we are professional marketeers, we will do anything you imagine in no time</p>
+            </div>
+            <div class="feat-box">
+                <img src="/imge/fet-2.png" alt="">
+                <h4>Development</h4>
+                <p>we are professional marketeers, we will do anything you imagine in no time</p>
+            </div>
+            <div class="feat-box">
+                <img src="/imge/fet-3.png" alt="">
+                <h4>Development</h4>
+                <p>we are professional marketeers, we will do anything you imagine in no time</p>
+            </div>
+            <div class="feat-box">
+                <img src="/imge/fet-4.png" alt="">
+                <h4>Development</h4>
+                <p>we are professional marketeers, we will do anything you imagine in no time</p>
+            </div>
+            <div class="feat-box">
+                <img src="/imge/fet-5.jpeg" alt="">
+                <h4>Development</h4>
+                <p>we are professional marketeers, we will do anything you imagine in no time</p>
+            </div>
+            <div class="feat-box">
+                <img src="/imge/fet-6.png" alt="">
+                <h4>Development</h4>
+                <p>we are professional marketeers, we will do anything you imagine in no time</p>
+            </div>
+
+        </div>
+    </div>
+    <!-- End Features -->
+    <!-- Start Testimonials -->
+    <div class="testimonials">
+        <div class="container">
+    <h2>Testimonials</h2>
+    <div class="box">
+<div class="ts-box">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A officiis error commodi ratione, laboriosam nihil blanditiis</p>
+    <div class="person-info">
+        <img src="https://placehold.jp/80x80.png" id="" alt="">
+        <div class="info">
+            <h4>SALAH ALI</h4>
+            <p>CEO At Company</p>
+        </div>
+    </div>
+</div>
+<div class="ts-box">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A officiis error commodi ratione, laboriosam nihil
+        blanditiis</p>
+    <div class="person-info">
+        <img src="https://placehold.jp/a7aad2/ffffff/80x80.png" id="" alt="">
+       <div class="info">
+        <h4>MOHAMED SALAH</h4>
+        <p>CEO At Company</p>
+       </div>
+    </div>
+</div>
+<div class="ts-box">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A officiis error commodi ratione, laboriosam nihil
+        blanditiis</p>
+    <div class="person-info">
+        <img src="https://placehold.jp/575b8e/ffffff/80x80.png" id="" alt="">
+       <div class="info">
+        <h4>NOR ALI</h4>
+        <p>CEO At Company</p>
+       </div>
+    </div>
+</div>
+    </div>
+            
+        </div>
+    </div>
+    <!-- End Testimonials -->
 
     <script src="js/master.js"></script>
 </body>
