Added Bullets Section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,22 @@
         </div>
     </div>
         <!-- End setings Box -->
+        <!-- Start Nav Bullets -->
+        <div class="nav-bullets">
+            <div class="bullet" data-section = ".about-us">
+                <div class="tooltip">About Us</div>
+            </div>
+            <div class="bullet" data-section = ".skills">
+                <div class="tooltip">Our Skills </div>
+            </div>
+            <div class="bullet" data-section = ".gallery">
+                <div class="tooltip">Our Gallery</div>
+            </div>
+            <div class="bullet" data-section = ".timeline">
+                <div class="tooltip">Timeline</div>
+            </div>
+        </div>
+        <!-- End Nav Bullets -->
     <!-- start landing Page -->
     <div class="landing-page">
         <div class="overlay"></div>
