--- a/index.html
+++ b/index.html
@@ -41,12 +41,20 @@
                 <span class="no" data-background="no">No</span>
                 </div>
             </div>
+            <div class="option-box">
+                <h4>Show Bullets</h4>
+                <div class="bullets-option">
+                <span class="yes active" data-display="show">Yes</span>
+                <span class="no" data-display="hide">No</span>
+                </div>
+            </div>
+            <BUtton class="reset-options">Reset Options</BUtton>
         </div>
     </div>
         <!-- End setings Box -->
         <!-- Start Nav Bullets -->
         <div class="nav-bullets">
-            <div class="bullet" data-section = ".about-us">
+            <div  class="bullet" data-section = ".about-us">
                 <div class="tooltip">About Us</div>
             </div>
             <div class="bullet" data-section = ".skills">
@@ -83,7 +91,7 @@
         </div>
         </div>
         <div class="introduction-text">
-            <h1>We are <span>creative</span> agnce</h1>
+            <h1>We Are <span>Creative</span> Agncy</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nesciunt error suscipit repudiandae
                 dolores. Iure debitis</p>
         </div>
