--- a/index.html
+++ b/index.html
@@ -336,6 +336,9 @@
         </div>
     </div>
     <!-- End Contact Us -->
+    <!-- Start Footer -->
+        <div class="footer">Created By SALAH.ABUKHATWA</div>
+    <!-- End Footer -->
 
     <script src="js/master.js"></script>
 </body>
